package org.example.Appl.Algorithm;

import java.util.List;

public interface CycleSolver {
    List<String> findCycle();
}